# RabbitMQWithCPP

./: CMakeLists.txt  README.md  main.cpp
Receiver/: CMakeLists.txt  main.cpp
Sender/: CMakeLists.txt  main.cpp
